[package]
name = "tbtc4u"
version = "0.1.0"
authors = ["Mark Tyneway <mark.tyneway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs" }
futures-util = { version = "0.3.5", default-features = false, features = ["std"] }
futures-timer = "3.0.2"
serde_json = { version = "1.0" }
tokio-tls = { version = "0.3.1" }
tokio = { version = "0.2.21", features = ["full"] }
lazy_static = "1.4.0"
pin-project = { version = "0.4.20", default-features = false }

bitcoin-spv = "2.0.0"
rmn-btc-provider = { path = "../riemann-rs/provider", default-features = false, features = ["testnet", "esplora"] }
rmn-btc = { path = "../riemann-rs/bitcoin", default-features = false, features = ["testnet"] }
riemann-core = { path = "../riemann-rs/core" }
